--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello from HTML!</h1>
-    <p>This is a static HTML page.</p>
+    <p>This is a static HTML page.jm</p>
 </body>
 </html>
